--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VUE_APP_BASE_API = '/api'
+VUE_APP_BASE_API = 'http://api.ywhub.com/api'
 ENV = 'development'
 
 // With this configuration, vue-cli uses babel-plugin-dynamic-import-node
