--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 VUE_APP_BASE_API = 'http://api.ywhub.com/api'
+VUE_APP_MASTER_URL = 'http://www.ywhub.com'
 ENV = 'development'
 
 // With this configuration, vue-cli uses babel-plugin-dynamic-import-node
