--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,4 @@
 NODE_ENV=production
-VUE_APP_BASE_API = '/api'
+VUE_APP_BASE_API = 'http://api.ywhub.com/api'
+VUE_APP_MASTER_URL = 'http://www.ywhub.com'
 ENV = 'staging'
