--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_BASE_API = 'http://api.inwehub.com/api'
-VUE_APP_MASTER_URL = 'http://www.inwehub.com'
+VUE_APP_BASE_API = 'https://api.inwehub.com/api'
+VUE_APP_MASTER_URL = 'https://www.inwehub.com'
 ENV = 'production'
